[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hxppy-archivator"
version = "1.0.1"
description = "CLI-утилита для упаковки исходного кода в текстовый файл и его последующей распаковки."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8+",
    "Operating System :: OS Independent",
]
dependencies = ["rich", "pathspec"]

[project.scripts]
hxppy = "hxppy:main"
